--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+<!-- This is a comment! -->
+<head>
+    <title>My Site Title</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <h1>Welcome to My Web Page</h1>
+    <p>This is a paragraph of text.</p>
+    
+    <!-- Add the anchor tag here -->
+    <a href="https://flatironschool.com">Flatiron School</a>
+</body>
+</html>
+
